tests/build/fail/widget/invalid_unset2.stderr
error: can only unset inherited property
 --> $DIR/invalid_unset2.rs:8:29
  |
8 |         margin as spacing = unset!;
  |                             ^^^^^

warning: unused import: `zero_ui::properties::margin`
 --> $DIR/invalid_unset2.rs:5:9
  |
5 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
